--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,16 @@ Platformer2D/[Pp]ackages
 # They also could contain extremely sensitive data
 Platformer2D/[Mm]emoryCaptures/
 
-# Asset meta data should only be ignored when the corresponding asset is also ignored
-Platformer2D/![Aa]ssets/**/*.meta
-
-# Models, Sounds and Textures
+# Directories in Assets
 Platformer2D/[Aa]ssets/Models/
 Platformer2D/[Aa]ssets/Sounds/
 Platformer2D/[Aa]ssets/Textures/
+Platformer2D/[Aa]ssets/Animations/
+Platformer2D/[Aa]ssets/Materials/
+
+# Asset meta data should only be ignored when the corresponding asset is also ignored
+!Platformer2D/[Aa]ssets/**/*.meta
+Platformer2D/[Aa]ssets/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 Platformer2D/[Aa]ssets/AssetStoreTools*
@@ -68,5 +71,5 @@ crashlytics-build.properties
 [Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
 # Temporary auto-generated Android Assets
-#[Aa]ssets/[Ss]treamingAssets/aa.meta
-#[Aa]ssets/[Ss]treamingAssets/aa/*
+[Aa]ssets/[Ss]treamingAssets/aa.meta
+[Aa]ssets/[Ss]treamingAssets/aa/*
