--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Platformer2D/[Aa]ssets/Animations/
 Platformer2D/[Aa]ssets/Materials/
 Platformer2D/[Aa]ssets/Prefabs/
 Platformer2D/[Aa]ssets/Images/
+Platformer2D/[Aa]ssets/TextMesh Pro/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !Platformer2D/[Aa]ssets/**/*.meta
